--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "init": "^0.1.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
     "nodemon": "^2.0.7"
   }
