--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.26.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.14",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.13.0",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.9"
   }
 }
