--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "downloadjs": "^1.4.7",
     "express": "^4.17.1",
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
